--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1091,5 +1091,38 @@
     "cancelTask": "Cancel Task",
     "markAsComplete": "Mark as Complete",
     "loadError": "Failed to load tasker profile."
+  },
+  "taskerExplore": {
+    "greeting": "Hi {{name}},",
+    "welcomeText": "Welcome to TASK!",
+    "pendingVerification": "Pending document verification",
+    "unreadMessages": "{{count}} unread messages",
+    "waitingOnTask": "Waiting on a Task?",
+    "waitingDescription": "Waiting for clients to accept your bids, if they still haven't you'll be able to see it in",
+    "bidSent": "Bid Sent",
+    "activeDescription": "But if they have you'll find it in",
+    "active": "Active",
+    "searchForTasks": "Search for Tasks",
+    "searchPlaceholder": "Search tasks...",
+    "filterBy": "Filter by...",
+    "clear": "Clear",
+    "nearestToYou": "Nearest to you",
+    "cleaning": "Cleaning",
+    "shoppingDelivery": "Shopping & delivery",
+    "handyman": "Handyman",
+    "moving": "Moving",
+    "ikeaAssembly": "IKEA assembly",
+    "yardworkServices": "Yardwork Services",
+    "dogWalking": "Dog Walking",
+    "other": "Other",
+    "clientBudget": "Client Budget: {{budget}}BHD",
+    "readMore": "Read More...",
+    "readLess": "Read Less",
+    "bidOnTask": "Bid on Task",
+    "noTasksAvailable": "No Tasks Available",
+    "noTasksSubtitle": "No tasks match your current filters. Try adjusting your search or filters to find more tasks.",
+    "loadingTasks": "Loading tasks...",
+    "taskTitle": "Task Title",
+    "taskDescription": "It is a long established fact that a reader will be distracted by the readable content of a page when It is a long established fact that a reader"
   }
 }
