added translation in client side

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -913,43 +913,50 @@
    "section10": "قد يتم تحديث هذه السياسة أحياناً. سيعكس تاريخ السريان آخر مراجعة. الاستمرار في الاستخدام يشكل قبولاً للتحديثات."
   },
   "taskerTaskDetails": {
-   "location": "الموقع",
-   "price": "السعر المعروض",
-       "openInMaps": "افتح في خرائط جوجل",
-     "mapPreview": "معاينة موقع المهمة على الخريطة",
-   "description": "وصف المهمة",
-   "category": "الفئة",
-   "enterBid": "أدخل عرضك",
-   "bidAmount": "عرضك (بالريال)",
-   "bidMessage": "رسالة إلى العميل",
-   "submitBid": "إرسال العرض",
-   "fillFields": "يرجى ملء جميع الحقول المطلوبة",
-   "successTitle": "تم بنجاح",
-   "bidSent": "تم إرسال عرضك بنجاح.",
-   "errorTitle": "خطأ",
-   "editYourBid": "تعديل عرضك",
-  "updateBid": "تحديث العرض",
-  "submitting": "جارٍ الإرسال...",
-  "status": "حالة العرض",
-  "loadingBid": "جاري تحميل عرض السعر الخاص بك...",
-   "loadingBidMessage": "يرجى الانتظار أثناء تحميل تفاصيل عرضك.",
-   "submittingBid": "جاري تقديم العرض...",
-   "invalidBidTitle": "عرض غير صالح",
-   "invalidBidMessage": "الحد الأدنى للمزايدة هو 0.1 دينار بحريني.",
-   "alreadyBidTitle": "تم تقديم عرض بالفعل",
-   "alreadyBidMessage": "لقد قدمت عرضاً لهذه المهمة بالفعل.",
-   "accessDeniedTitle": "الوصول مرفوض",
-   "accessDeniedMessage": "يجب أن تكون معتمداً لتقديم عرض.",
-   "ok": "موافق",
-   "bidSubmitError": "حدث خطأ أثناء إرسال العرض.",
-   "noBidFoundTitle": "لم يتم العثور على عرض",
-   "noBidFoundMessage": "لم تقدم عرضاً لهذه المهمة بعد.",
-   "cannotEditTitle": "لا يمكن التعديل",
-   "cannotEditMessage": "هذه المهمة لم تعد تقبل العروض.",
-   "bidUpdateError": "حدث خطأ أثناء تحديث العرض.",
-   "images": "الصور",
-   "noImages": "لا توجد صور",
-   "biddingClosed": "تم إغلاق المزايدة"
+    "title": "تفاصيل المهمة",
+    "inProgress": "قيد التنفيذ",
+    "postedOn": "تاريخ النشر",
+    "budget": "الميزانية",
+    "description": "الوصف",
+    "defaultDescription": "لم يتم توفير وصف",
+    "images": "الصور",
+    "location": "الموقع",
+    "footerText": "قدم عرضاً على المهمة، سيقوم العملاء بعد ذلك باختيار مقدم الخدمة، والذي قد تكون أنت :)",
+    "biddingClosed": "تم إغلاق العطاءات",
+    "updateBid": "تحديث العرض",
+    "placeBid": "قدم عرضاً",
+    "price": "السعر المعروض",
+    "openInMaps": "افتح في خرائط جوجل",
+    "mapPreview": "معاينة موقع المهمة على الخريطة",
+    "category": "الفئة",
+    "enterBid": "أدخل عرضك",
+    "bidAmount": "عرضك (بالريال)",
+    "bidMessage": "رسالة إلى العميل",
+    "submitBid": "إرسال العرض",
+    "fillFields": "يرجى ملء جميع الحقول المطلوبة",
+    "successTitle": "تم بنجاح",
+    "bidSent": "تم إرسال عرضك بنجاح.",
+    "errorTitle": "خطأ",
+    "editYourBid": "تعديل عرضك",
+    "submitting": "جارٍ الإرسال...",
+    "status": "حالة العرض",
+    "loadingBid": "جاري تحميل عرض السعر الخاص بك...",
+    "loadingBidMessage": "يرجى الانتظار أثناء تحميل تفاصيل عرضك.",
+    "submittingBid": "جاري تقديم العرض...",
+    "invalidBidTitle": "عرض غير صالح",
+    "invalidBidMessage": "الحد الأدنى للمزايدة هو 0.1 دينار بحريني.",
+    "alreadyBidTitle": "تم تقديم عرض بالفعل",
+    "alreadyBidMessage": "لقد قدمت عرضاً لهذه المهمة بالفعل.",
+    "accessDeniedTitle": "الوصول مرفوض",
+    "accessDeniedMessage": "يجب أن تكون معتمداً لتقديم عرض.",
+    "ok": "موافق",
+    "bidSubmitError": "حدث خطأ أثناء إرسال العرض.",
+    "noBidFoundTitle": "لم يتم العثور على عرض",
+    "noBidFoundMessage": "لم تقدم عرضاً لهذه المهمة بعد.",
+    "cannotEditTitle": "لا يمكن التعديل",
+    "cannotEditMessage": "هذه المهمة لم تعد تقبل العروض.",
+    "bidUpdateError": "حدث خطأ أثناء تحديث العرض.",
+    "noImages": "لا توجد صور"
   },
   "aboutUs": {
     "title": "معلومات عنا",
@@ -1139,7 +1146,26 @@
      "editTask": "تعديل المهمة",
      "cancelTask": "إلغاء المهمة",
      "markAsComplete": "تحديد كمكتملة",
-     "loadError": "فشل في تحميل ملف مقدم الخدمة."
+     "loadError": "فشل في تحميل ملف مقدم الخدمة.",
+     "logoutConfirmTitle": "تسجيل الخروج",
+     "logoutConfirmMessage": "هل أنت متأكد من أنك تريد تسجيل الخروج؟",
+     "cancel": "إلغاء",
+     "logout": "تسجيل الخروج",
+     "managePhotoTitle": "إدارة صورة الملف الشخصي",
+     "uploadFailed": "فشل في الرفع",
+     "uploadFailedMessage": "فشل في رفع صورة الملف الشخصي. يرجى المحاولة مرة أخرى.",
+     "removePhoto": "إزالة الصورة",
+     "removePhotoError": "خطأ في إزالة الصورة",
+     "removePhotoErrorMessage": "فشل في إزالة صورة الملف الشخصي. يرجى المحاولة مرة أخرى.",
+     "verifiedTasker": "مقدم خدمة معتمد",
+     "verificationDeclined": "تم رفض التحقق",
+     "verificationPending": "التحقق معلق",
+     "edit": "تعديل الملف الشخصي",
+     "changePassword": "تغيير كلمة المرور",
+     "documents": "المستندات",
+     "bank": "الحساب المصرفي",
+     "payments": "مدفوعاتي",
+     "settings": "الإعدادات"
    },
    "taskerExplore": {
      "greeting": "مرحباً {{name}}،",
@@ -1173,6 +1199,22 @@
      "loadingTasks": "جاري تحميل المهام...",
      "taskTitle": "عنوان المهمة",
      "taskDescription": "إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما إنها حقيقة راسخة منذ فترة طويلة أن القارئ"
+   },
+   "taskerMessages": {
+     "title": "الرسائل",
+     "searchPlaceholder": "بحث",
+     "unnamedUser": "مستخدم غير معروف",
+     "emptyTitle": "لا توجد رسائل بعد",
+     "emptySubtitle": "ابدأ المحادثات مع العملاء من خلال تقديم عروض على مهامهم!"
+   },
+   "taskerReviews": {
+     "myReviews": "تقييماتي",
+     "reviews": "التقييمات",
+     "avgRating": "متوسط التقييم",
+     "taskTitle": "عنوان المهمة",
+     "defaultComment": "إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما",
+     "emptyTitle": "لا توجد تقييمات بعد",
+     "emptySubtitle": "ابدأ إكمال المهام لتلقي تقييمات من العملاء!"
    }
 }
   
