--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -864,45 +864,52 @@
   "heading10": "10. Policy Updates",
   "section10": "This Policy may be updated occasionally. The Effective Date will reflect the latest revision. Continued use constitutes acceptance of updates."
 },
-"taskerTaskDetails": {
-  "location": "Location",
-  "price": "Offered Price",
-  "description": "Task Description",
-  "category": "Category",
-  "enterBid": "Place Your Bid",
-  "bidAmount": "Your Bid (BHD)",
-  "bidMessage": "Message to Client",
-  "submitBid": "Submit Bid",
-  "fillFields": "Please fill in all required fields",
-  "successTitle": "Success",
-  "bidSent": "Your bid has been submitted.",
-  "errorTitle": "Error",
-  "editYourBid": "Edit Your Bid",
-      "openInMaps": "Open in Google Maps",
+  "taskerTaskDetails": {
+    "title": "Task Details",
+    "inProgress": "In Progress",
+    "postedOn": "Posted on",
+    "budget": "BUDGET",
+    "description": "Description",
+    "defaultDescription": "No description provided",
+    "images": "Images",
+    "location": "Location",
+    "footerText": "Place a Bid on the Task, Clients will then select a Tasker, Which could be you :)",
+    "biddingClosed": "Bidding Closed",
+    "updateBid": "Update Bid",
+    "placeBid": "Place a bid",
+    "price": "Offered Price",
+    "category": "Category",
+    "enterBid": "Place Your Bid",
+    "bidAmount": "Your Bid (BHD)",
+    "bidMessage": "Message to Client",
+    "submitBid": "Submit Bid",
+    "fillFields": "Please fill in all required fields",
+    "successTitle": "Success",
+    "bidSent": "Your bid has been submitted.",
+    "errorTitle": "Error",
+    "editYourBid": "Edit Your Bid",
+    "openInMaps": "Open in Google Maps",
     "mapPreview": "Map preview of task location",
-"updateBid": "Update Bid",
-"submitting": "Submitting...",
-"status": "Bid Status",
-"loadingBid": "Fetching your bid...",
-"loadingBidMessage": "Please wait while we load your bid details.",
-"submittingBid": "Submitting bid...",
-  "invalidBidTitle": "Invalid Bid",
-  "invalidBidMessage": "Minimum bid amount is 0.1 BHD.",
-  "alreadyBidTitle": "Already Bid",
-  "alreadyBidMessage": "You've already submitted a bid for this task.",
-  "accessDeniedTitle": "Access Denied",
-  "accessDeniedMessage": "You must be verified to place a bid.",
-  "ok": "OK",
-  "bidSubmitError": "Something went wrong while submitting the bid.",
-  "noBidFoundTitle": "No Bid Found",
-  "noBidFoundMessage": "You haven't submitted a bid for this task yet",
-  "cannotEditTitle": "Cannot Edit",
-  "cannotEditMessage": "This task is no longer accepting bids.",
-  "bidUpdateError": "Something went wrong while updating the bid.",
-  "images": "Images",
-  "noImages": "No images",
-  "biddingClosed": "Bidding Closed"
-},
+    "submitting": "Submitting...",
+    "status": "Bid Status",
+    "loadingBid": "Fetching your bid...",
+    "loadingBidMessage": "Please wait while we load your bid details.",
+    "submittingBid": "Submitting bid...",
+    "invalidBidTitle": "Invalid Bid",
+    "invalidBidMessage": "Minimum bid amount is 0.1 BHD.",
+    "alreadyBidTitle": "Already Bid",
+    "alreadyBidMessage": "You've already submitted a bid for this task.",
+    "accessDeniedTitle": "Access Denied",
+    "accessDeniedMessage": "You must be verified to place a bid.",
+    "ok": "OK",
+    "bidSubmitError": "Something went wrong while submitting the bid.",
+    "noBidFoundTitle": "No Bid Found",
+    "noBidFoundMessage": "You haven't submitted a bid for this task yet",
+    "cannotEditTitle": "Cannot Edit",
+    "cannotEditMessage": "This task is no longer accepting bids.",
+    "bidUpdateError": "Something went wrong while updating the bid.",
+    "noImages": "No images"
+  },
 "aboutUs": {
   "title": "About Us",
   "description": "Our mission is to make everyday life easier by connecting busy individuals in Bahrain with people ready to lend a helping hand. We provide a simple and reliable platform where those in need of support can find capable individuals eager to assist, while also creating opportunities for students, professionals, and individuals from all walks of life to earn extra income. By bridging these two groups, we aim to foster convenience, collaboration, and a stronger sense of community across Bahrain."
@@ -1090,7 +1097,26 @@
     "editTask": "Edit Task",
     "cancelTask": "Cancel Task",
     "markAsComplete": "Mark as Complete",
-    "loadError": "Failed to load tasker profile."
+    "loadError": "Failed to load tasker profile.",
+    "logoutConfirmTitle": "Logout",
+    "logoutConfirmMessage": "Are you sure you want to logout?",
+    "cancel": "Cancel",
+    "logout": "Logout",
+    "managePhotoTitle": "Manage Profile Photo",
+    "uploadFailed": "Upload Failed",
+    "uploadFailedMessage": "Failed to upload profile photo. Please try again.",
+    "removePhoto": "Remove Photo",
+    "removePhotoError": "Remove Photo Error",
+    "removePhotoErrorMessage": "Failed to remove profile photo. Please try again.",
+    "verifiedTasker": "Verified Tasker",
+    "verificationDeclined": "Verification Declined",
+    "verificationPending": "Verification Pending",
+    "edit": "Edit Profile",
+    "changePassword": "Change Password",
+    "documents": "Documents",
+    "bank": "Bank Account",
+    "payments": "My Payments",
+    "settings": "Settings"
   },
   "taskerExplore": {
     "greeting": "Hi {{name}},",
@@ -1124,5 +1150,21 @@
     "loadingTasks": "Loading tasks...",
     "taskTitle": "Task Title",
     "taskDescription": "It is a long established fact that a reader will be distracted by the readable content of a page when It is a long established fact that a reader"
+  },
+  "taskerMessages": {
+    "title": "Messages",
+    "searchPlaceholder": "Search",
+    "unnamedUser": "Unnamed User",
+    "emptyTitle": "No Messages Yet",
+    "emptySubtitle": "Start conversations with clients by bidding on their tasks!"
+  },
+  "taskerReviews": {
+    "myReviews": "My Reviews",
+    "reviews": "Reviews",
+    "avgRating": "Avg Rating",
+    "taskTitle": "Task Title",
+    "defaultComment": "It is a long established fact that a reader will be distracted by the readable content of a page when It is a long established fact that a reader will be distracted by the readable content of a page when It is a long established fact that a reader will be distracted by the readable content of a page when",
+    "emptyTitle": "No Reviews Yet",
+    "emptySubtitle": "Start completing tasks to receive reviews from clients!"
   }
 }
